@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.10971 2005/08/27 19:13:39 minskim Exp $
+$NetBSD: CHANGES,v 1.10972 2005/08/27 22:25:51 recht Exp $
 
 Changes to the packages collection and infrastructure in 2005:
 
@@ -3832,3 +3832,4 @@ Changes to the packages collection and infrastructure in 2005:
 	Updated mail/sylpheed-devel to 2.1.1 [chris 2005-08-27]
 	Updated math/mathomatic to 12.4.9 [minskim 2005-08-27]
 	Updated databases/gnats to 4.1.0 [recht 2005-08-27]
+	Updated devel/semi to 1.14.6nb4 [uebayasi 2005-08-28]
